# writeflow

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md  pyproject.toml  write.py
.github/workflows/: ci.yml
docs/: validation.md
src/writeflow/: __init__.py  cli.py  config.py  interview.py  output.py  progress.py  web.py  writeflow.py
src/writeflow/agents/: __init__.py  base.py  claude_client.py  devil_advocate.py  editor.py  judge.py  llm_client.py  local_voice_collector.py  observation_interviewer.py  prompts.py  real_novelty_gate.py  researcher.py  thesis_architect.py  writer.py
src/writeflow/core/: __init__.py  debate_graph.py  orchestrator.py  quality_gate.py  round_controller.py  state_machine.py  task_queue.py
src/writeflow/storage/: __init__.py  material_db.py
tests/: test_config.py  test_interview.py  test_judge_depth_criteria.py  test_llm_client.py  test_observation_local_novelty.py  test_output.py  test_progress.py  test_quality_gate.py  test_thesis_architect.py  test_trace_callback.py  test_web.py  test_write_cli.py  test_writeflow_depth_scores.py  test_writeflow_trace.py  test_writer_prompt.py
