[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writeflow"
version = "0.2.13"
description = "支持 DeepSeek/MiniMax/Anthropic 的批判性深度稿件多Agent生产系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "WriteFlow Team"}]
keywords = ["multi-agent", "critical-thinking", "batch-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.18.0",
]
queue = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
writeflow = "writeflow.cli:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
